Definicion de funciones

--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -2,7 +2,7 @@
 <html>
 	<header>
 		<title> Impostor Game</title>
-		<script src="modelo.js"></script>
+		<script type="text/javascript" src="modelo.js"></script>
 	</header>
 	<body>
 		<p>
