Se han realizado multiples tareas de las historias de usuario - iniciar/abandonar/asignar Tareas e impostor

--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -2,11 +2,15 @@
 <html>
 	<header>
 		<title> Impostor Game</title>
-		<script type="text/javascript" src="modelo.js"></script>
+		<meta charset="utf-8">
+		<script type="text/javascript" src="src/modelo.js"></script>
 	</header>
 	<body>
 		<p>
 			Este es el punto de entrada al juego desde el cliente.
 		</p>
+		<script type="text/javascript">
+			inicio();
+		</script>
 	</body>
 </html>
