--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -2,12 +2,15 @@
 <html>
 	<header>
 		<title> Impostor Game</title>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+		<script src="Cliente/src/clienteRest.js"></script>
 	</header>
 	<body>
 		<p>
 			Este es el punto de entrada al juego desde el cliente.
 		</p>
 		<script type="text/javascript">
+			var rest = new ClienteRest();
 		</script>
 	</body>
 </html>
