Solucionado errores de iniPar,abanPar,creaPar,y ListarPartidas*

--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -13,8 +13,8 @@
 		</p>
 		<script type="text/javascript">
 			var rest = new ClienteRest();
-			var ws =  new ClienteWS();
-				ws.ini();
+			var ws =  new ClienteWS("Pepe");
+				//ws.ini();
 		</script>
 	</body>
 </html>
