--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -2,19 +2,36 @@
 <html>
 	<header>
 		<title> Impostor Game</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+		<script src="Cliente/lib/bootstrap.min.js"></script>
+		<link rel="stylesheet" href="Cliente/lib/bootstrap.min.css">
+
+		
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
 		<script src="Cliente/src/clienteRest.js"></script>
 		<script src="Cliente/src/clienteWS.js"></script>
+		<script src="Cliente/src/controlWeb.js"></script>
 	</header>
 	<body>
-		<p>
-			Este es el punto de entrada al juego desde el cliente.
-		</p>
+		<div class="container">
+			<h3>Impostor Game</h3>
+			<div class="row">
+				<div id="mainMenu"></div>
+				<div id="crearPartida"></div>
+				<div id="unirAPartida"></div>
+				<div id="esperandoRival">
+					
+				</div>
+			</div>
+		</div>
 		<script type="text/javascript">
 			var rest = new ClienteRest();
-			var ws =  new ClienteWS("Pepe");
+			//var ws =  new ClienteWS("Pepe");
+			var cw =  new ControlWeb();
+			cw.mainMenu();
 				//ws.ini();
 		</script>
+
 	</body>
 </html>
