--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -20,9 +20,7 @@
 				<div id="mainMenu"></div>
 				<div id="crearPartida"></div>
 				<div id="unirAPartida"></div>
-				<div id="esperandoRival">
-					
-				</div>
+				<div id="esperandoRival"></div>
 			</div>
 		</div>
 		<script type="text/javascript">
