--- a/Cliente/index-game.html
+++ b/Cliente/index-game.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.16.2/dist/phaser.js"></script>
+    <script src="../Cliente/src/game.js"></script>
     <title>Phaser Template</title>
 
     <style>
@@ -30,7 +32,6 @@
 
   <body>
     <div id="game-container"></div>
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.16.2/dist/phaser.js"></script>
-    <script src="../Cliente/src/game.js" type="module"></script>
+    
   </body>
 </html>
