--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -25,11 +25,33 @@
 				<div id="unirAPartida"></div>
 				<div id="esperandoRival"></div>
 				<div id="initialGame"></div>
+				<!-- MODALES
+				<div class="modal" id ="avisarImpostor" tabindex="-1">
+				  <div class="modal-dialog">
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <h5 class="modal-title">ImpostorApp</h5>
+				        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				          <span aria-hidden="true">&times;</span>
+				        </button>
+				      </div>
+				      <div class="modal-body">
+				        <p>Eres el impostor, que comience la purga!</p>
+				      </div>
+				      <div class="modal-footer">
+				        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+				-->
+				        <!--<button type="button" class="btn btn-primary">Save changes</button>-->
+				<!--	</div>
+				    </div>
+				  </div>
+				</div>
+				-->
 			</div>
 		</div>
 		<script type="text/javascript">
 			//var rest = new ClienteRest();
-			var ws =  new ClienteWS("Pepe");
+			var ws;
 			var cw =  new ControlWeb();
 			cw.mainMenu();
 				//ws.ini();
