--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -17,14 +17,27 @@
     	<script src="../Cliente/src/game.js"></script>
 	</header>
 	<body>
-		<div class="container">
-			<h3>Impostor Game</h3>
-			<div class="row">
+		<div id= "backgroundID" class="container">
+			<h3 id="General">Impostor Game</h3>
 				<div id="mainMenu"></div>
 				<div id="crearPartida"></div>
 				<div id="unirAPartida"></div>
 				<div id="esperandoRival"></div>
-				<div id="initialGame"></div>
+				<div class="row justify-content-center justify-content-md-start">
+					<div class="col-md-4"></div>
+					<div class="col-md-4">
+						<div id="initialGame">
+							<script type="text/javascript">
+								//var rest = new ClienteRest();
+								var ws;
+								var cw =  new ControlWeb();
+								cw.mainMenu();
+									//ws.ini();
+							</script>
+						</div>
+					</div>
+					<div class="col-md-4"></div>
+				</div>
 				<!-- MODALES
 				<div class="modal" id ="avisarImpostor" tabindex="-1">
 				  <div class="modal-dialog">
@@ -47,15 +60,8 @@
 				  </div>
 				</div>
 				-->
-			</div>
 		</div>
-		<script type="text/javascript">
-			//var rest = new ClienteRest();
-			var ws;
-			var cw =  new ControlWeb();
-			cw.mainMenu();
-				//ws.ini();
-		</script>
+		
 
 	</body>
 </html>
