--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -24,6 +24,7 @@
 				<div id="crearPartida"></div>
 				<div id="unirAPartida"></div>
 				<div id="esperandoRival"></div>
+				<div id="Votaciones-Container"></div>
 				<div id="initialGame">
 						<div class="row justify-content-center justify-content-md-start">
 					<div class="col-md-4"></div>
@@ -39,7 +40,6 @@
 					</div>
 					<div class="col-md-4"></div>
 				</div>
-				<!-- MODALES
 				<div class="modal" id ="modalGeneral" tabindex="-1">
 				  <div class="modal-dialog">
 				    <div class="modal-content">
@@ -51,15 +51,11 @@
 				      </div>
 				      <div class="modal-body" id="contenidoModal">
 				      </div>
-				      <div class="modal-footer">
-				        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-				-->
-				        <!--<button type="button" class="btn btn-primary">Save changes</button>-->
-				<!--	</div>
+				      <div class="modal-footer" id="modalFooter">
+					</div>
 				    </div>
 				  </div>
 				</div>
-				-->
 		</div>
 		
 
