fixed error death cosultLayout

--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="Cliente/lib/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="Cliente/css/spinner.css">
 		<link rel="stylesheet" type="text/css" href="Cliente/css/index.css">
-
+		<link rel="icon" type="image/vnd.microsoft.icon" href="Cliente/img/felcot.ico">
 		
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
 		<script src="Cliente/src/clienteRest.js"></script>
@@ -19,13 +19,14 @@
 	</head>
 	<body>
 		<div id= "backgroundID" class="container">
-			<h3 id="General">Impostor Game</h3>
+			<img src="Cliente/img/felcot.ico" id="icon">
+			<h3 id="General" >Impostor Game</h3>
+
 				<div id="mainMenu"></div>
 				<div id="crearPartida"></div>
 				<div id="unirAPartida"></div>
 				<div id="esperandoRival"></div>
 				<div id="Votaciones-Container"></div>
-				<div id="barra"></div>
 				<div class="row text-center" id="game"></div>
 				<div id="initialGame">
 					<div class="row justify-content-center justify-content-md-start">
